# orchestrator-client

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: client.md  realtime.md  sse.md
orchestrator_client/: __init__.py  client.py  config.py  exceptions.py  models.py  py.typed  socketio.py  sync_client.py
tests/: conftest.py  test_client.py  test_integration.py  test_socketio.py  test_sync_client.py
